# Particle-System

./: App.cpp  App.h  CMakeLists.txt  README.md
src/: CMakeLists.txt  GLUtils.h
src/ParticleEmitters/: BaseParticleEmitter.cpp  BaseParticleEmitter.h  BaseParticleEmitter_1.cpp  BaseParticleEmitter_1.h  BaseParticleEmitter_2.cpp  BaseParticleEmitter_2.h  BaseParticleEmitter_3.cpp  BaseParticleEmitter_3.h  ColourModifier.cpp  ColourModifier.h  ColourOverLifetimeModifer.cpp  ColourOverLifetimeModifer.h  EmitterProperties.h  FloatModifier.cpp  FloatModifier.h  IParticlePropertyModifier.h  IParticlePropertyOverLifetimeModifier.h  LifetimeModifier.cpp  LifetimeModifier.h  Particle.h  ParticleEmitter.cpp  ParticleEmitter.h  ParticlePropertyModifier.h  ParticlePropertyOverLifetimeModifer.h  PositionModifier.cpp  PositionModifier.h  SizeModifier.cpp  SizeModifier.h  SizeOverLifetimeModifer.cpp  SizeOverLifetimeModifer.h  Vec3Modifier.cpp  Vec3Modifier.h  VelocityModifier.cpp  VelocityModifier.h
src/benchmarking/: PerformanceMetrics.h  PerformanceProfiler.cpp  PerformanceProfiler.h
src/io/: FileHandler.cpp  FileHandler.h  Serialiser.cpp  Serialiser.h
src/opengl/: GLUtils.cpp  GLUtils.h  VertexArrayObject.cpp  VertexArrayObject.h  VertexBufferObject.cpp  VertexBufferObject.h
src/shaders/: CMakeLists.txt  baseParticleEmitter.frag  baseParticleEmitter.vert  basic.frag  basic.vert  gpu.vert  gpu_1.vert  particleManage.comp  particleManage_1.comp  particleUpdate.comp  particleUpdate_1.comp  particleUpdate_2.comp
